# ManuTool

./: CMakeLists.txt  Icon_assets.cpp  Icon_assets.h  Icon_logging.cpp  Icon_logging.h  Main.cpp  ManuTool.cpp  ManuTool.rc  ManuTool.sln  ManuTool.vcxproj  ManuTool.vcxproj.filters  README.md  Resource.h  Resource.rc  icons_resource.rc
Data/: categories.txt  recipes.txt
ManuTool/: Items_Armor.h  Items_Axe.h  Items_Belt.h  Items_Bow.h  Items_Cane.h  Items_Cloak.h  Items_Costume.h  Items_Crystal.h  Items_FishingTool.h  Items_Food.h  Items_Gun.h  Items_Hat.h  Items_Ironware.h  Items_Medicine.h  Items_Necklace.h  Items_Other.h  Items_Pottery.h  Items_Ring.h  Items_Shoe.h  Items_Spear.h  Items_Stationery.h  Items_Sword.h  items_Helmet.h
Recipes/: Armor.cpp  Axe.cpp  BaseMaterials.cpp  Belt.cpp  Bow.cpp  Cane.cpp  Cloak.cpp  Clothes.cpp  CompoundMaterials.cpp  Crystal.cpp  FishingTool.cpp  Food.cpp  Gun.cpp  Hat.cpp  Helmet.cpp  Ironware.cpp  Medicine.cpp  Necklace.cpp  Other.cpp  Pottery.cpp  Ring.cpp  Shoes.cpp  Spear.cpp  Stationery.cpp  Sword.cpp  Tools.cpp
Scripts/: extract_recipes.py  generate_categories.py  generate_icon_resources.py
